--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.16",
     "cross-fetch": "^3.1.6",
+    "daisyui": "^4.4.23",
     "dotenv": "^16.3.1",
     "ic-mops": "^0.17.2",
     "jsdom": "^22.1.0",
