--- a/mops.toml
+++ b/mops.toml
@@ -1,4 +1,8 @@
 # Motoko dependencies (https://mops.one/)
 
 [dependencies]
-base = "0.7.4"
+base = "0.10.2"
+array = "https://github.com/aviate-labs/array.mo#v0.2.0"
+StableTrieMap = "https://github.com/NatLabs/StableTrieMap#main"
+StableBuffer = "https://github.com/canscale/StableBuffer#v0.2.0"
+itertools = "0.1.2"
